--- a/package.json
+++ b/package.json
@@ -14,23 +14,37 @@
         "seed": "node --loader ts-node/esm prisma/seed.ts"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@fullcalendar/core": "^6.1.17",
+        "@fullcalendar/daygrid": "^6.1.17",
+        "@fullcalendar/interaction": "^6.1.17",
+        "@fullcalendar/list": "^6.1.17",
+        "@fullcalendar/react": "^6.1.17",
+        "@fullcalendar/timegrid": "^6.1.17",
         "@headlessui/react": "^2.2.2",
         "@heroicons/react": "^2.2.0",
+        "@mui/material": "^7.0.2",
         "@prisma/client": "^6.6.0",
         "@types/bcrypt": "^5.0.2",
         "@types/jsonwebtoken": "^9.0.9",
         "axios": "^1.6.7",
         "bcrypt": "^5.1.1",
         "csv-parse": "^5.6.0",
+        "date-fns": "^4.1.0",
         "framer-motion": "^12.7.4",
+        "ical-generator": "^8.1.1",
         "jose": "^6.0.10",
         "jsonwebtoken": "^9.0.2",
+        "jspdf": "^3.0.1",
+        "jspdf-autotable": "^5.0.2",
         "lucide-react": "^0.501.0",
         "next": "14.1.0",
         "prisma": "^6.6.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-toastify": "^11.0.5"
+        "react-toastify": "^11.0.5",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@types/node": "^20",
@@ -43,6 +57,6 @@
         "tailwindcss": "^3.4.1",
         "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5"
+        "typescript": "^5.8.3"
     }
 }
