--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "db:seed": "node --loader ts-node/esm prisma/seed.ts"
+        "db:seed": "node prisma/seed.cjs"
     },
     "prisma": {
         "seed": "node --loader ts-node/esm prisma/seed.ts"
     },
     "dependencies": {
+        "@ant-design/icons": "^6.0.0",
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
         "@fullcalendar/core": "^6.1.17",
@@ -30,6 +31,7 @@
         "@tippyjs/react": "^4.2.6",
         "@types/bcrypt": "^5.0.2",
         "@types/jsonwebtoken": "^9.0.9",
+        "antd": "^5.24.8",
         "axios": "^1.6.7",
         "bcrypt": "^5.1.1",
         "class-variance-authority": "^0.7.1",
