--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "db:seed": "node prisma/seed.cjs"
+        "db:seed": "node prisma/seed.cjs",
+        "test": "jest",
+        "optimize-images": "node src/utils/optimizeImages.js"
     },
     "prisma": {
         "seed": "node --loader ts-node/esm prisma/seed.ts"
@@ -38,36 +40,44 @@
         "csv-parse": "^5.6.0",
         "date-fns": "^4.1.0",
         "framer-motion": "^12.7.4",
+        "glob": "^10.3.10",
         "ical-generator": "^8.1.1",
         "jose": "^6.0.10",
         "jsonwebtoken": "^9.0.2",
         "jspdf": "^3.0.1",
         "jspdf-autotable": "^5.0.2",
         "lucide-react": "^0.501.0",
-        "next": "14.1.0",
+        "next": "13.5.4",
         "next-auth": "^4.24.11",
         "prisma": "^6.6.0",
-        "react": "^18.2.0",
+        "react": "^18",
         "react-beautiful-dnd": "^13.1.1",
         "react-datepicker": "^8.3.0",
-        "react-dom": "^18.2.0",
+        "react-dom": "^18",
         "react-hot-toast": "^2.5.2",
         "react-toastify": "^11.0.5",
+        "sharp": "^0.32.6",
         "tailwind-merge": "^3.2.0",
         "tippy.js": "^6.3.7",
         "xlsx": "^0.18.5"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.3.0",
+        "@types/jest": "^29.5.14",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
-        "autoprefixer": "^10.0.1",
+        "autoprefixer": "^10",
+        "babel-jest": "^29.7.0",
         "eslint": "^8",
-        "eslint-config-next": "14.1.0",
+        "eslint-config-next": "13.5.4",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "postcss": "^8",
-        "tailwindcss": "^3.4.1",
+        "tailwindcss": "^3",
         "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.8.3"
+        "typescript": "^5"
     }
 }
