Refactor(ORCP): Correction API (PATCH->POST), amélioration UI, correctif JSX

--- a/.cursor-config.json
+++ b/.cursor-config.json
@@ -19,6 +19,11 @@
             "name": "analyse-code-contexte",
             "enabled": true,
             "path": ".cursor/rules/analyse-code-contexte.json"
+        },
+        {
+            "name": "interactive-feedback",
+            "enabled": true,
+            "path": ".cursor/rules/interactive-feedback.json"
         }
     ]
 }
