--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,19 +1,17 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "lib": [
-            "es5",
-            "dom"
-        ],
-        "types": [
-            "cypress",
-            "@testing-library/cypress",
-            "node"
-        ],
-        "resolveJsonModule": true,
-        "esModuleInterop": true
-    },
-    "include": [
-        "**/*.ts"
-    ]
+  "compilerOptions": {
+    "target": "ES2020",
+    "lib": ["ES2020", "dom", "dom.iterable"],
+    "types": ["cypress", "@testing-library/cypress", "node"],
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": false,
+    "skipLibCheck": true,
+    "noEmit": true,
+    "isolatedModules": true,
+    "moduleResolution": "node",
+    "allowJs": true
+  },
+  "include": ["**/*.ts", "**/*.js", "support/**/*"]
 }
