fix: correction partielle des erreurs de build Next.js
- Conversion routes API de withAuth vers checkUserRole
- Création module permissions manquant
- Correction schémas Zod (retrait .default())
- Correction noms de méthodes du service BlocPlanningService
- Correction propriétés BlocSector (nom→name, couleur→colorCode, etc.)
- Ajout scripts de vérification et correction automatique
- Documentation des erreurs dans BUILD_ERRORS_REPORT.md

--- a/package.json
+++ b/package.json
@@ -173,7 +173,10 @@
     "migrate:trame-modeles": "node package-scripts/migrate-trame-modeles.js",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "verify": "npm run lint && npm test && npm run build",
+    "verify:quick": "npm run test:fast && npm run lint",
+    "verify:pre-commit": "npm run lint && npm test"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
