--- a/package.json
+++ b/package.json
@@ -201,7 +201,7 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/x-date-pickers": "^8.2.0",
-    "@prisma/client": "^6.8.2",
+    "@prisma/client": "6.9.0",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -235,7 +235,6 @@
     "@types/node-cache": "^4.1.3",
     "@types/papaparse": "^5.3.16",
     "@types/pg": "^8.11.14",
-    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-resizable": "^3.0.8",
     "@types/react-window": "^1.8.8",
@@ -283,11 +282,10 @@
     "pdf-lib": "^1.17.1",
     "pg": "^8.15.6",
     "pg-hstore": "^2.3.4",
-    "prisma": "^6.8.2",
+    "prisma": "6.9.0",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
     "react": "^18",
-    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.3.0",
     "react-day-picker": "^9.6.7",
