feat: Phase 1 - Remove 10 unused dependencies
- Removed unused dependencies identified by depcheck:
  - @radix-ui/react-dropdown-menu
  - @types/pg
  - bufferutil
  - cookies-next
  - critters
  - pg
  - pg-hstore
  - react-window-infinite-loader
  - utf-8-validate
  - @mui/x-date-pickers

- Created comprehensive dependency analysis report
- Created DnD migration script and guide
- Fixed ESLint errors in migration script

--- a/package.json
+++ b/package.json
@@ -4,179 +4,61 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:open": "./scripts/dev-force-3000.sh",
     "dev:clean": "./scripts/clean-browser-and-start.sh",
+    "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "lint-staged": "lint-staged",
-    "db:seed": "node prisma/seed.cjs",
     "test": "jest",
+    "db:migrate": "prisma migrate dev",
+    "db:migrate:prod": "prisma migrate deploy",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:reset": "prisma migrate reset",
+    "db:studio": "prisma studio",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci",
-    "test:validate": "node scripts/validate-test-performance.js",
-    "test:bulletproof": "npm run test:validate",
-    "test:fast": "jest --config jest.config.bulletproof.js",
-    "test:recovery": "jest --config jest.config.recovery.js --passWithNoTests",
-    "test:recovery:watch": "jest --config jest.config.recovery.js --watch --passWithNoTests",
-    "test:fix-massive": "tsx scripts/fix-tests-massive.ts",
-    "test:check-syntax": "tsc --noEmit --project tsconfig.jest.json",
-    "claude:workers": "node scripts/claude-test-workers.js",
-    "claude:analyze": "npm run claude:workers",
-    "claude:autonomous": "node scripts/claude-workers-autonomous.js",
-    "claude:autonomous:multi": "concurrently \"npm run claude:autonomous claude-1\" \"npm run claude:autonomous claude-2\" \"npm run claude:autonomous claude-3\"",
-    "claude:cycle": "node scripts/claude-workers-autonomous.js claude-1",
-    "test:integration": "jest --testPathPattern=integration",
-    "test:unit": "jest --testPathPattern=__tests__",
-    "test:all": "jest --coverage",
-    "optimize-images": "node src/utils/optimizeImages.js",
-    "seed": "ts-node -P ./tsconfig.seed.json ./prisma/seed.ts",
-    "seed:leaves-test": "tsx ./prisma/seed-leaves-test.ts",
-    "seed:rules": "tsx src/scripts/seedRules.ts",
+    "test:critical": "jest src/modules/conges src/lib/auth --coverage",
+    "test:changed": "jest -o",
+    "test:debug": "node --inspect-brk ./node_modules/.bin/jest --runInBand",
+    "e2e": "cypress open",
+    "e2e:run": "cypress run",
+    "e2e:ci": "start-server-and-test dev http://localhost:3000 'cypress run'",
+    "e2e:debug": "DEBUG=cypress:* cypress open",
+    "e2e:record": "cypress run --record",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write .",
+    "quality": "npm run lint && npm run type-check",
+    "validate": "npm run quality && npm test",
+    "perf:analyze": "ANALYZE=true next build",
+    "perf:audit": "node scripts/performance-audit-simple.js",
+    "perf:monitor": "node scripts/performance-monitoring-daemon.js start",
+    "ci:test": "npm run validate && npm run test:coverage",
+    "ci:e2e": "npm run build && npm run e2e:ci",
+    "ci:full": "npm run ci:test && npm run ci:e2e",
+    "audit": "./scripts/audit-global.sh",
+    "etape": "./scripts/etape",
+    "export": "node scripts/export-db-state.js",
+    "clean": "rm -rf .next node_modules",
+    "setup": "npm install && npm run db:migrate && npm run db:seed",
+    "precommit": "lint-staged",
+    "prepush": "npm run validate",
+    "release": "npm run validate && npm run build",
+    "start:prod": "npm run build && npm run start",
+    "update": "npm update && npm run validate",
     "seed:surgeons": "tsx src/modules/seeds/seedSurgeons.ts",
     "seed:specialties": "tsx src/modules/seeds/seedSpecialties.ts",
     "seed:rooms": "tsx src/modules/seeds/seedOperatingRooms.ts",
-    "export:all": "node scripts/export-db-state.js",
-    "export:selective": "node scripts/export-specific-data.js",
+    "seed:rules": "tsx src/scripts/seedRules.ts",
     "export:csv": "node scripts/export-to-csv.js",
-    "export:to-seed": "node scripts/create-seed-from-export.js",
-    "test:performance": "jest --testNamePattern=Performance",
-    "test:performance:watch": "nodemon --watch src --ext ts --exec 'npm run test:performance'",
-    "test:services": "jest src/services/__tests__/*.test.ts",
-    "type-check": "tsc --noEmit",
-    "lint:fix": "next lint --fix",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "analyze": "ANALYZE=true next build",
-    "clean": "rm -rf node_modules package-lock.json && npm install",
-    "validate": "npm run lint && npm run type-check && npm run test",
+    "check:surgeons": "tsx scripts/check-duplicate-surgeons.ts",
+    "health:check": "./scripts/health-check.sh",
     "prepare": "husky install",
-    "test:bloc": "jest src/hooks/__tests__/useOperatingRoom* src/services/__tests__/blocPlanning*",
-    "test:bloc:coverage": "jest --coverage src/hooks/__tests__/useOperatingRoom* src/services/__tests__/blocPlanning*",
-    "test:hooks": "jest src/hooks/__tests__/*.test.tsx",
-    "cypress": "cypress open",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run --browser chrome",
-    "cypress:run:headless": "cypress run --browser chrome --headless",
-    "cypress:e2e": "cypress run --e2e --browser chrome",
-    "cypress:e2e:headless": "cypress run --e2e --browser chrome --headless",
-    "cypress:component": "cypress run --component --browser chrome",
-    "cypress:component:headless": "cypress run --component --browser chrome --headless",
-    "cypress:e2e:open": "cypress open --e2e",
-    "cypress:component:open": "cypress open --component",
-    "test:e2e": "jest --config=jest.e2e.config.js",
-    "test:e2e:ci": "jest --config=jest.e2e.config.js --runInBand --forceExit",
-    "test:e2e:puppeteer": "start-server-and-test dev http://localhost:3000 'HEADLESS=true jest --config jest.e2e.config.js --runInBand'",
-    "test:e2e:puppeteer:visual": "start-server-and-test dev http://localhost:3000 'HEADLESS=false jest --config jest.e2e.config.js --runInBand'",
-    "test:e2e:workflows": "jest --config jest.e2e.config.js --testPathPattern=workflows",
-    "test:e2e:performance": "jest --config jest.e2e.config.js --testPathPattern=performance",
-    "test:e2e:accessibility": "jest --config jest.e2e.config.js --testPathPattern=accessibility",
-    "test:e2e:regression": "jest --config jest.e2e.config.js --testPathPattern=regression",
-    "test:e2e:puppeteer:all": "npm run test:e2e:puppeteer",
-    "test:autonomous": "jest tests/e2e/autonomous-navigation.e2e.test.js --config jest.e2e.config.js --runInBand",
-    "test:autonomous:daemon": "node scripts/autonomous-testing-daemon.js",
-    "test:autonomous:infinite": "MAX_CYCLES=Infinity node scripts/autonomous-testing-daemon.js",
-    "test:autonomous:cycles": "MAX_CYCLES=5 CYCLE_DELAY=10000 node scripts/autonomous-testing-daemon.js",
-    "test:autonomous:never-stop": "node scripts/run-autonomous-tests.js",
-    "test:autonomous:fix-bugs": "node scripts/autonomous-bug-fixer.js",
-    "test:manual": "node scripts/automated-manual-tester.js",
-    "test:manual:visible": "HEADLESS=false node scripts/automated-manual-tester.js",
-    "test:manual:fast": "SLOW_MO=0 node scripts/automated-manual-tester.js",
-    "test:stable": "jest --config config/jest/jest.config.stabilization.js",
-    "test:stable:watch": "jest --config config/jest/jest.config.stabilization.js --watch",
-    "test:stable:coverage": "jest --config config/jest/jest.config.stabilization.js --coverage",
-    "cypress:reset-db": "node -e \"require('dotenv').config(); require('@prisma/client').PrismaClient.$executeRawUnsafe('DELETE FROM \"User\" CASCADE; DELETE FROM \"Leaves\" CASCADE;')\"",
-    "cypress:setup-test-db": "export DATABASE_URL='postgresql://mathildanesth_user:mathildanesth_password@localhost:5433/mathildanesth_test' && NODE_ENV=test prisma migrate deploy",
-    "test:critical": "jest src/modules/conges src/lib/auth --coverage",
-    "test:performance:new": "jest src/tests/performance/",
-    "test:load": "jest src/tests/performance/api-load-testing.test.ts",
-    "test:integration:api": "./scripts/run-integration-tests.sh",
-    "test:all:comprehensive": "./scripts/run-all-tests.sh",
-    "monitoring:start": "npm run dev & npm run performance:baseline",
-    "monitoring:report": "node scripts/monitoring-daemon.js report",
-    "monitoring:test": "node scripts/monitoring-daemon.js test",
-    "health:check": "curl -f http://localhost:3000/api/health || exit 1",
-    "quality:audit": "node scripts/quality-audit.js",
-    "performance:audit": "node scripts/performance-audit-simple.js",
     "test:security": "npm audit && npm run test:critical",
-    "test:security:comprehensive": "jest --config jest.security.config.js",
-    "test:security:auth": "jest --config jest.security.config.js --testPathPattern=auth",
-    "test:security:injection": "jest --config jest.security.config.js --testPathPattern=injection",
-    "test:security:xss": "jest --config jest.security.config.js --testPathPattern=xss",
-    "test:security:integration": "jest --config jest.security.config.js --testPathPattern=security-integration",
-    "test:security:full": "./scripts/run-security-tests.sh",
-    "test:security:watch": "jest --config jest.security.config.js --watch",
-    "test:security:coverage": "jest --config jest.security.config.js --coverage",
-    "cypress:a11y": "cypress run --e2e --spec \"cypress/e2e/accessibility/**/*.spec.ts\" --browser chrome --headless",
-    "cypress:responsive": "cypress run --e2e --spec \"cypress/e2e/compatibility/**/*.spec.ts\" --browser chrome --headless",
-    "cypress:perf": "cypress run --e2e --spec \"cypress/e2e/performance/**/*.spec.ts\" --browser chrome --headless",
-    "cypress:reports": "npx mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mocha/full-report.json && npx marge cypress/reports/mocha/full-report.json -f report -o cypress/reports/mocha",
-    "test:e2e:all": "cross-env DATABASE_URL='postgresql://mathildanesth_user:mathildanesth_password@localhost:5433/mathildanesth_test' start-server-and-test \"sleep 5 && npm run dev\" http://localhost:3000 \"cypress run --e2e --browser chrome --headless\"",
-    "test:e2e:all:visual": "cross-env DATABASE_URL='postgresql://mathildanesth_user:mathildanesth_password@localhost:5433/mathildanesth_test' start-server-and-test \"sleep 5 && npm run dev\" http://localhost:3000 \"cypress run --e2e --browser chrome\"",
-    "test:e2e:a11y": "start-server-and-test dev http://localhost:3000 cypress:a11y",
-    "test:e2e:responsive": "start-server-and-test dev http://localhost:3000 cypress:responsive",
-    "test:e2e:perf": "start-server-and-test dev http://localhost:3000 cypress:perf",
-    "storybook": "storybook dev -p 6006",
-    "prisma:seed": "prisma db seed",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:migrate:deploy": "prisma migrate deploy",
-    "prisma:migrate:reset": "prisma migrate reset",
-    "prisma:migrate:simulation-cache": "prisma migrate dev --name add_simulation_intermediate_results",
-    "test:leaves": "jest src/modules/conges --coverage",
-    "test:auth": "jest src/lib/auth --coverage",
-    "performance:analyze": "ANALYZE=true npm run build",
-    "performance:webpack": "WEBPACK_ANALYZE=true npm run build",
-    "performance:budget": "node scripts/performance-budget-monitor.js",
-    "performance:budget:watch": "nodemon --delay 3 --watch .next --watch src --ext js,ts,tsx --exec 'npm run performance:budget'",
-    "performance:budget:ci": "npm run build && npm run performance:budget",
-    "performance:budget:alert": "npm run performance:budget || echo 'Performance budget violations detected!'",
-    "performance:baseline": "npm run performance:audit && npm run test:performance",
-    "quality:full": "npm run test:critical && npm run performance:audit",
-    "audit:security": "npm audit",
-    "audit:performance": "npm run performance:audit",
-    "etape": "./scripts/etape",
-    "etape:quick": "./scripts/etape --quick",
-    "etape:simple": "./scripts/etape-simple",
-    "etape:roadmap": "./scripts/etape --roadmap",
-    "check:surgeons": "npx tsx scripts/check-duplicate-surgeons.ts",
-    "cleanup:surgeons": "npx tsx scripts/check-duplicate-surgeons.ts --cleanup",
-    "cleanup:surgeons:execute": "npx tsx scripts/check-duplicate-surgeons.ts --cleanup --execute",
-    "audit:global": "./scripts/audit-global.sh",
     "audit:debt": "./scripts/audit-technical-debt.sh",
-    "health-check": "./scripts/health-check.sh",
-    "test:full": "npm run test && npm run test:e2e",
-    "test:e2e:auth": "jest --config=jest.e2e.config.js --testNamePattern='auth'",
-    "test:e2e:leaves": "jest --config=jest.e2e.config.js --testNamePattern='leaves'",
-    "test:e2e:planning": "jest --config=jest.e2e.config.js --testNamePattern='planning'",
-    "test:e2e:sites": "jest --config=jest.e2e.puppeteer.config.js tests/e2e/sites-rooms-management.test.ts",
-    "test:e2e:debug": "jest --config=jest.e2e.config.js --testNamePattern='debug' --runInBand",
-    "test:e2e:status": "node tests/e2e/scripts/inventory-manager.js status",
-    "test:e2e:report": "node tests/e2e/scripts/inventory-manager.js report",
-    "test:e2e:needs-attention": "node tests/e2e/scripts/inventory-manager.js needs-attention",
-    "test:e2e:invalidate": "node tests/e2e/scripts/inventory-manager.js invalidate",
-    "test:e2e:validate": "node tests/e2e/scripts/inventory-manager.js validate",
-    "cypress:run:headed": "cypress run --headed",
-    "cypress:test:auth": "cypress run --spec 'cypress/e2e/auth/**/*'",
-    "cypress:test:leaves": "cypress run --spec 'cypress/e2e/conges/**/*'",
-    "cypress:test:bloc": "cypress run --spec 'cypress/e2e/bloc-operatoire/**/*'",
-    "cypress:test:rules": "cypress run --spec 'cypress/e2e/rules/**/*'",
-    "cypress:test:performance": "cypress run --spec 'cypress/e2e/performance/**/*'",
-    "bulletproof:tests": "./scripts/run-bulletproof-tests.sh",
-    "bulletproof:e2e": "TEST_MODE=e2e ./scripts/run-bulletproof-tests.sh",
-    "bulletproof:performance": "TEST_MODE=performance ./scripts/run-bulletproof-tests.sh",
-    "bulletproof:quality": "TEST_MODE=quality ./scripts/run-bulletproof-tests.sh",
-    "bulletproof:unit": "TEST_MODE=unit ./scripts/run-bulletproof-tests.sh",
-    "monitor:start": "node scripts/performance-monitoring-daemon.js start",
-    "monitor:stop": "node scripts/performance-monitoring-daemon.js stop",
-    "monitor:status": "node scripts/performance-monitoring-daemon.js status",
-    "optimize:cicd": "./scripts/optimize-ci-cd.sh",
-    "migrate:trame-modeles": "node package-scripts/migrate-trame-modeles.js",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:studio": "prisma studio",
-    "verify": "npm run lint && npm test && npm run build",
-    "verify:quick": "npm run test:fast && npm run lint",
-    "verify:pre-commit": "npm run lint && npm test"
+    "quality:full": "npm run test:critical && npm run perf:audit",
+    "storybook": "storybook dev -p 6006"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -200,7 +82,6 @@
     "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
-    "@mui/x-date-pickers": "^8.2.0",
     "@prisma/client": "6.9.0",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
@@ -208,7 +89,6 @@
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.11",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-progress": "^1.1.7",
@@ -234,7 +114,6 @@
     "@types/express": "^5.0.1",
     "@types/node-cache": "^4.1.3",
     "@types/papaparse": "^5.3.16",
-    "@types/pg": "^8.11.14",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-resizable": "^3.0.8",
     "@types/react-window": "^1.8.8",
@@ -246,13 +125,10 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
-    "bufferutil": "^4.0.9",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "cookies-next": "^4.3.0",
-    "critters": "^0.0.23",
     "cross-env": "^7.0.3",
     "csv-parse": "^5.6.0",
     "csv-string": "^4.1.1",
@@ -280,8 +156,6 @@
     "node-cache": "^5.1.2",
     "papaparse": "^5.5.3",
     "pdf-lib": "^1.17.1",
-    "pg": "^8.15.6",
-    "pg-hstore": "^2.3.4",
     "prisma": "6.9.0",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
@@ -299,7 +173,6 @@
     "react-resizable": "^3.0.5",
     "react-toastify": "^11.0.5",
     "react-window": "^1.8.11",
-    "react-window-infinite-loader": "^1.0.10",
     "recharts": "^2.15.3",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
@@ -310,7 +183,6 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tippy.js": "^6.3.7",
-    "utf-8-validate": "^6.0.5",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^4.7.1",
