feat: add auth performance optimizations (not activated)
- Created optimized auth cache with SHA256 hashing and 1h TTL
- Added performance monitoring system with metrics tracking
- Implemented optimized auth server utils with request caching
- Created enhanced middleware to avoid double token verification
- Added optimized Prisma client with query monitoring
- Created /api/auth/performance endpoint for monitoring

Note: Optimizations are created but NOT YET ACTIVATED in production code.
Original auth system remains unchanged.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 
 # testing
 /coverage
+/coverage-*
 
 # next.js
 /.next/
@@ -145,3 +146,10 @@ node_modules/
 # Task files
 tasks.json
 tasks/ package.json.backup
+
+# Task Master
+.task-master/logs/
+.task-master/tasks/*.tmp
+
+# Added by Task Master AI
+tasks/ 
